backend/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cdf-smarthub
  labels:
    name: cdf-smarthub
    environment: production
    app: cdf-smarthub
